<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="F_GetSBValveStatuses" Id="{72b0c37a-5830-4ca1-849f-a410d971477c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_GetSBValveStatuses : ST_SBValveStatuses
VAR_INPUT
END_VAR
VAR
	stStatus : ST_SBValveStatuses := (
		bGateValveOpen:= GVL_BTS_VAC.fb_PP_VGC.M_IsOpen(), 
		bVentValveOpen:= GVL_BTS_VAC.fb_PP_VVC.M_IsOpen(), 
		bORingPumpValveOpen:= GVL_BTS_VAC.fb_PP_VRC_1.iq_stValve.eState = E_ValvePositionState.OPEN, 
		bForelineValveOpen:= GVL_BTS_VAC.fb_PP_VRC_2.iq_stValve.eState = E_ValvePositionState.OPEN, 
		bSBVentOpen:= FALSE, 
		bSlowPumpValveOpen:= GVL_BTS_VAC.fb_PP_VRC_3.iq_stValve.eState = E_ValvePositionState.OPEN, 
		bSBSlowVentOpen:= FALSE);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_GetSBValveStatuses := stStatus;]]></ST>
    </Implementation>
    <LineIds Name="F_GetSBValveStatuses">
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>